--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,11 @@
+@source "../node_modules/@uploadthing/react/dist"
+
+
 @import "tailwindcss";
 @import "tw-animate-css";
+@import "tailwindcss";
+
+@import "uploadthing/tw/v4";
 
 @custom-variant dark (&:is(.dark *));
 
